feat(t6m): pagination the 1st part